[project]
name = "nlp-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "detoxify>=0.5.2",
    "duckdb>=1.5.2",
    "pandas>=3.0.2",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "transformers>=5.6.1",
]
